@@ -12,8 +12,5 @@ lazy val root = (project in file("."))
     libraryDependencies += "org.ow2.asm" % "asm" % "9.2",
     libraryDependencies += "org.ow2.asm" % "asm-util" % "9.2",
     libraryDependencies += "org.ow2.asm" % "asm-tree" % "9.2",
-    javaOptions ++= Seq(
-      "--add-modules", "jdk.incubator.foreign"
-    ),
     fork := true
   )
